bin/testsuite/tests/compiler/src/errors/compiler3282.swg
#global testerror "Err0194"

#[Swag.Strict]
func mkVar(name: string, value: s32) {}
